@@ -33,8 +33,8 @@ import javax.annotation.Nullable;
  * import com.pulumi.azuredevops.ProjectArgs;
  * import com.pulumi.azuredevops.ServiceEndpointAzureEcr;
  * import com.pulumi.azuredevops.ServiceEndpointAzureEcrArgs;
- * import java.util.List;
  * import java.util.ArrayList;
+ * import java.util.Arrays;
  * import java.util.Map;
  * import java.io.File;
  * import java.nio.file.Files;
@@ -90,8 +90,8 @@ import javax.annotation.Nullable;
  * import com.pulumi.azuredevops.inputs.ServiceEndpointAzureEcrCredentialsArgs;
  * import com.pulumi.azurerm.FederatedIdentityCredential;
  * import com.pulumi.azurerm.FederatedIdentityCredentialArgs;
- * import java.util.List;
  * import java.util.ArrayList;
+ * import java.util.Arrays;
  * import java.util.Map;
  * import java.io.File;
  * import java.nio.file.Files;
@@ -141,7 +141,7 @@ import javax.annotation.Nullable;
  *             .name("example-federated-credential")
  *             .resourceGroupName(identity.name())
  *             .parentId(exampleUserAssignedIdentity.id())
- *             .audience(List.of("api://AzureADTokenExchange"))
+ *             .audience(Arrays.asList("api://AzureADTokenExchange"))
  *             .issuer(exampleServiceEndpointAzureEcr.workloadIdentityFederationIssuer())
  *             .subject(exampleServiceEndpointAzureEcr.workloadIdentityFederationSubject())
  *             .build());
